--- a/.github/workflows/002.yml
+++ b/.github/workflows/002.yml
@@ -74,9 +74,7 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
     - name: Update feeds
-      run: |
-        sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
-        cd openwrt && ./scripts/feeds update -a
+      run: cd openwrt && ./scripts/feeds update -a
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
