--- a/.github/workflows/001.yml
+++ b/.github/workflows/001.yml
@@ -12,7 +12,7 @@ on:
   repository_dispatch:
   workflow_dispatch:
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede.git
+  REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: k3.config
