--- a/.github/workflows/001.yml
+++ b/.github/workflows/001.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: main
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: k3.config
   DIY_P1_SH: diy-part1.sh
