--- a/.github/workflows/Phicomm-K3.yml
+++ b/.github/workflows/Phicomm-K3.yml
@@ -17,7 +17,7 @@ on:
 env:
   REPO_URL: https://github.com/xiaochen66666/lede.git
   REPO_BRANCH: master
-  CONFIG_FILE: .config
+  CONFIG_FILE: K3.config
   DIY_P1_SH: diy-part1.sh  
   DIY_P2_SH: diy-part2.sh
   CLASH_KERNEL: arm64
