--- a/K3.config
+++ b/K3.config
@@ -4680,7 +4680,7 @@ CONFIG_PACKAGE_luci-app-mwan3=y
 # CONFIG_PACKAGE_luci-app-olsr-viz is not set
 # CONFIG_PACKAGE_luci-app-omcproxy is not set
 # CONFIG_PACKAGE_luci-app-openvpn is not set
-# CONFIG_PACKAGE_luci-app-openvpn-server is not set
+CONFIG_PACKAGE_luci-app-openvpn-server=y
 # CONFIG_PACKAGE_luci-app-p910nd is not set
 # CONFIG_PACKAGE_luci-app-pagekitec is not set
 CONFIG_PACKAGE_luci-app-passwall=y
@@ -6978,3 +6978,9 @@ CONFIG_PACKAGE_ubi-utils=y
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
+CONFIG_DEFAULT_luci-app-adguardhome=y
+CONFIG_DEFAULT_luci-app-cns-server=y
+CONFIG_DEFAULT_luci-app-mosdns=y
+CONFIG_DEFAULT_luci-app-mproxy=y
+CONFIG_DEFAULT_luci-app-smartdns=y
+CONFIG_DEFAULT_luci-app-socat=y
