--- a/.config
+++ b/.config
@@ -6967,6 +6967,9 @@ CONFIG_PACKAGE_ubi-utils=y
 # CONFIG_PACKAGE_yq is not set
 # CONFIG_PACKAGE_zyxel-reset is not set
 # end of Utilities
+CONFIG_DEFAULT_luci-app-adguardhome=y
+CONFIG_DEFAULT_luci-app-mproxy=y
+CONFIG_DEFAULT_luci-app-socat=y
 
 #
 # Xorg
